Error handling for registering event with duplicate name, some mindless error handling for unauthorized event-registering. List your own link now redirects to verify email page if not logged in. Fixed navbar flicker by moving code from js to css. Fixed event links in myEvents.html

--- a/css/mobile-style.css
+++ b/css/mobile-style.css
@@ -78,6 +78,10 @@
     color: #fff;
 }
 
+.gcm-logout {
+    display: none;
+}
+
 .gcm-has-submenu {
     cursor: pointer;
 }
